--- a/asquero/src/index.css
+++ b/asquero/src/index.css
@@ -26,7 +26,7 @@ code {
 }
 
 .background-main {
-  margin-top: 8rem
+  margin-top: 12rem
 }
 
  .p-1 {
@@ -72,7 +72,7 @@ input[type=text] {
   padding: 12px 20px;
   margin: 3rem 1rem 0 0;
   box-sizing: border-box;
-  background: blue;
+  /* background: blue; */
 }
 
 /* products */
@@ -116,4 +116,9 @@ input[type=text] {
 
 .img-2:hover .overlay {
   opacity: 0.1;
+}
+
+#search1 {
+  width: 30rem;
+  margin-top: 0rem;
 }
